Fix: Navbar items center and btn collapse

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'test';
+    src: local('test'), url(./fonts/test.ttf) format('truetype');
+  }
+
+/* * {
+    font-family: "test";
+} */
